Fix stretched images

--- a/src/_assets/styles/main.scss
+++ b/src/_assets/styles/main.scss
@@ -17,6 +17,7 @@ picture {
   position: relative;
 
   > img {
+    height: 100%;
     position: absolute;
   }
 }
